test_scores/negative_dimers/features/Q8N3L3.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q8N3L3.pkl.xz